Bugfix while adding new configuration for data source.